apps/zbugs/src/index.css
/* ... */
.primary-cta {
  color: var(--color-text-primary-active);
  border-radius: 0.5rem;
  background-color: var(--color-primary-cta);
  padding: 0.4rem 1.2rem;
  font-size: 1rem;
  font-weight: 800;
  font-family: inherit;
  cursor: pointer;
  overflow: hidden;
  position: relative;
  border: 1px solid var(--color-primary-cta-outline);
}

.primary-cta::before,
.primary-cta::after {
  content: '';
  display: block;
  position: absolute;
  width: 3.75rem;
  height: 100%;
  top: 0;
  filter: blur(30px);
  transform: translateX(-100px) skewX(-15deg);
}

.primary-cta::before {
  background: rgba(255, 255, 255, 0.5);
}

.primary-cta::after {
  background: rgba(255, 255, 255, 0.2);
}

.primary-cta:hover::before,
.primary-cta:hover::after {
  transform: translateX(300px) skewX(-15deg);
  transition: 0.3s;
}

.primary-cta:focus,
.primary-cta:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.modal-confirm {
  color: var(--color-text-primary-active);
  border-radius: 0.5rem;
  background-color: var(--color-primary-cta);
  padding: 0.4rem 1.2rem;
  font-size: 1rem;
  font-weight: 800;
  font-family: inherit;
  cursor: pointer;
  overflow: hidden;
  position: relative;
  border: 1px solid var(--color-primary-cta-outline);
}

.modal-confirm:disabled {
  color: var(--color-primary-cta-outline);
  background-color: var(--color-modal-background);
  cursor: default;
}

.primary-nav {
  position: fixed;
  height: calc(100vh - 4rem);
  top: 2rem;
}

.section-tabs {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.nav-item {
  padding: 0.375rem 1rem;
  border-radius: 0.5rem;
}

.nav-item:hover {
  color: var(--color-text-primary-active);
}

.nav-active {
  color: var(--color-text-primary-active);
  background-color: var(--color-nav-selected);
}

.nav-container .spacer {
  display: flex;
  flex: 1;
}

.fps-meter {
  display: block;
  border-radius: 0.5rem;
  opacity: 0.3;
  width: 100%;
  margin-bottom: 2rem;
}

.user-login {
  margin-top: auto;
}

.user-login a {
  display: block;
  font-weight: 800;
  opacity: 0.6;
  padding: 0.4rem 1.2rem;
  border-radius: 0.5rem;
  text-align: center;
  color: var(--color-text-primary-active);
  border: 1px solid var(--color-text-dimmed-label);
  transition: opacity 0.3s ease-in-out;
}

.user-login a:hover {
  opacity: 1;
}

.logged-in-user-container {
  display: flex;
  justify-content: space-between;
}

.logged-in-user {
  flex: 0 0 auto;
}

.logged-in-user-name {
  cursor: default;
}

.logout-button {
  display: block;
  height: 1.5rem;
  width: 1.5rem;
  background: transparent url(assets/icons/logout.svg) no-repeat;
  opacity: 0.6;
  transform: scale(0.8);
  transition: opacity 0.3s ease-in-out;
}

.logout-button:hover {
  opacity: 1;
}

/* Primary Content Panel */

.primary-content {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding-left: 16rem;
}

.list-view-header-container {
  display: flex;
  flex-direction: column;
  flex: 0;
  margin-bottom: 1.5rem;
}

.list-view-header {
  font-size: 2rem;
  font-weight: 400;
  margin: 0;
  display: flex;
  align-items: center;
}

.list-view-header.search-mode {
  margin: -5px;
}

.sort-control-container {
  margin-left: auto;
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

.sort-control,
.sort-direction {
  opacity: 0.6;
  transition: opacity 0.3s ease-in-out;
}

.sort-control:hover,
.sort-direction:hover {
  opacity: 1;
}

.sort-direction {
  display: block;
  height: 0.875rem;
  width: 0.875rem;
}

.sort-direction.desc {
  background: transparent url(assets/icons/sort-descending.svg) no-repeat;
}

.sort-direction.asc {
  background: transparent url(assets/icons/sort-ascending.svg) no-repeat;
}

.issue-timestamp {
  cursor: help;
  margin-right: 2rem;
}

.list-view-header input {
  background: rgba(255, 255, 255, 0.1);
  font-size: 2rem;
  font-weight: 400;
  padding: 5px 8px;
  display: inline;
  flex: 1;
}

.issue-count {
  font-size: 1rem;
  font-weight: 700;
  color: var(--color-background);
  background-color: var(--color-text-primary);
  border-radius: 2rem;
  padding: 0.25rem 0.5rem;
  vertical-align: middle;
  margin-left: 1rem;
}

/* Filtering */

.list-view-filter-container {
  display: flex;
  flex: 0;
  flex-wrap: wrap;
  gap: 0.5rem;
  box-shadow: 0px 1px 0px 0px var(--color-light-outline) inset;
  padding: 1rem 2rem 1rem 2rem;
  background: transparent url(assets/icons/filter.svg) no-repeat 0.5rem center;
}

.filter-label {
  color: var(--color-text-dimmed-label);
  padding: 0.25rem 0;
  line-height: 1;
}

.list-view-filter-container .pill {
  margin: 0;
  color: var(--color-text-primary-active);
  background-color: var(--color-nav-selected);
}

.add-filter-container {
  position: relative;
}

.add-filter-modal {
  position: absolute;
  z-index: 1;
  display: flex;
  gap: 1.5rem;
  flex-direction: column;
  width: 16rem;
  top: 2rem;
  padding: 1.5rem;
  background-color: var(--color-modal-background);
  backdrop-filter: var(--filter-backdrop-blur);
  border-radius: 0.5rem;
  border: 1px solid var(--color-modal-outline);
}

.filter-modal-item {
  position: relative;
}

.add-filter {
  color: var(--color-primary-cta);
  background-color: var(--color-background);
  border: 1px solid var(--color-primary-cta-dimmed);
  padding: 0.25rem 0.5rem 0.25rem;
  border-radius: 2rem;
  margin: 0 0.5rem 0 0;
  line-height: 1;
  transition: background-color 0.3s ease;
  position: relative;
}

.add-filter:hover,
.add-filter.active {
  background-color: var(--color-primary-cta-dimmed);
}

.add-filter .plus {
  vertical-align: 1px;
}

.filter-modal-label {
  font-size: var(--typo-label-size);
  font-weight: var(--typo-label-weight);
  margin-bottom: 1rem;
}

.filter-modal-button.creator-select {
  background: var(--color-nav-selected) url(assets/icons/avatar-default.svg)
    no-repeat 0.8175rem center;
  padding-left: 2.5rem;
}
/* ... */

